# qinsim

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/qinsim/: __init__.py  __main__.py  cli.py  config.py  runtime.py  status.py
src/qinsim/_core/: __init__.py  channel.py  checksum.py  effects.py  geo.py  motion_model.py  ocean_profile.py  path_cursor.py  time_fmt.py  value_profile.py
src/qinsim/_core/formatters/: nmea_depth.py  nmea_gnss.py  nmea_hdt.py  nmea_psxn20.py  nmea_xdr.py  tss1.py
src/qinsim/_core/state/: depth_state.py  env_state.py  gnss_state.py  heading_state.py  motion_state.py
src/qinsim/_core/transports/: __init__.py  udp.py
src/qinsim/drivers/: __init__.py  base.py  depth.py  env.py  gnss.py  heading.py  motion.py
src/qinsim/scenarios/: __init__.py  dropout_burst.yaml  harbour_rtk_fixed.yaml  nmea_corruption.yaml  open_ocean_survey.yaml  rtk_outage.yaml
tests/: conftest.py  test_config.py  test_effects.py  test_formatters.py  test_smoke.py
