[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qinsim"
version = "0.1.0"
description = "Minimal Qinsy NMEA simulator. Single-exe, UDP, fault injection, TUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sam Glazier", email = "samuel@hydrosurveytech.com.au" }]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pynmea2>=1.19",
    "types-PyYAML>=6.0",
    "pyinstaller>=6.10",
]

[project.scripts]
qinsim = "qinsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qinsim = ["scenarios/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
files = ["src/qinsim"]

[[tool.mypy.overrides]]
module = ["pynmea2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
